# sarafun_msgs

./: CMakeLists.txt  README.md  package.xml
action/: AssembledKeyframe.action  ContactKeyframe.action  GraspEstimation.action  GraspKeyframe.action  InitialKeyframe.action  InsertionKeyframe.action  KeyframeExtraction.action  LoadKeyframes.action  MoveKeyframe.action  PickUpKeyframe.action  PositionEstimation.action
msg/: CompleteFeedback.msg  KeyframeList.msg  KeyframeMsg.msg
srv/: BTGeneration.srv  GetSensorData.srv  LoadKeyframes.srv  SelectDetectionType.srv  SetPID.srv  TrackObjects.srv  VisualizeTransform.srv
