<?xml version="1.0"?>
<package>
  <name>sarafun_msgs</name>
  <version>0.0.0</version>

  <description>A package containing the msgs for sarafun</description>

  <maintainer email="thprapav@iti.gr">Theofanis Prapavesis Semetzidis</maintainer>
  <license>Private</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>
